[project]
name = "YK-ComfyUI-HybridI2I-OSS"
description = "批量多API图生图节点，支持社区版/全能Xinbao/官方PRO混合策略，支持OSS图床与上传URL输出"
version = "4.0.0"
license = {text = "MIT"}
dependencies = ["oss2", "requests", "Pillow", "numpy", "torch"]

[project.urls]
Repository = "https://github.com/ds-fae/YK-ComfyUI-HybridI2I-OSS"

[tool.comfy]
PublisherId = "fae"
DisplayName = "YK-ComfyUI-HybridI2I-OSS"
Icon = ""
